[package]
name = "edi_streamer"
description = "A streaming EDI parser implementation. Designed for large files."
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["parsing", "parser-implementations", "data-structures", "encoding"]
keywords = ["edi", "x12"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
